tests/conformance/errors/recursion_stack_depth/input.dgm
def recur(n) {
  iff (n == 0) {
    undefined_var
  }
  retrun recur(n - 1)
}

recur(3)
